<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LogIn">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="404dp"
        android:layout_height="310dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerPadding="20dp"
            android:paddingLeft="12dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textViewNombreLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="25dp"
                android:text="@string/name"
                android:textAlignment="textStart"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="12dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textViewEmailLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextEmailLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15sp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textViewContraseñaLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contraseña"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15sp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textViewRepiteContraseñaLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repite_contraseña"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextRepiteContraseñaLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="20sp" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/textViewErrorLogInEmail"
        android:layout_width="391dp"
        android:layout_height="64dp"
        android:text="@string/emailIncorrecto"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#AF1616"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewErrorLogInVacio"
        android:layout_width="391dp"
        android:layout_height="64dp"
        android:text="@string/camposVacios"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#AF1616"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="1.0" />
    <TextView
        android:id="@+id/textViewErrorLogInContraseñas"
        android:layout_width="391dp"
        android:layout_height="64dp"
        android:text="@string/contraseñasIncorrectas"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#AF1616"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="1.0" />
    <TextView
        android:id="@+id/textViewErrorLogInUsuarioExiste"
        android:layout_width="391dp"
        android:layout_height="64dp"
        android:text="@string/usuarioExiste"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#AF1616"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/textViewLogInTitle"
        android:layout_width="182dp"
        android:layout_height="56dp"
        android:text="@string/logIn"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="147dp"
        android:layout_height="72dp"
        android:layout_marginBottom="28dp"
        android:background="@color/main_color"
        android:text="@string/logIn"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonSalir"
        android:layout_width="68dp"
        android:layout_height="53dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textViewLogInTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347"
        app:srcCompat="?attr/actionModeCloseDrawable" />
</androidx.constraintlayout.widget.ConstraintLayout>